make year dynamic

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <footer class="footer">
     <div class="container">
-      <p>&copy; 2025 MILLZDOTETH LLC. All rights reserved.</p>
+      <p>&copy; <span id="currentYear"></span> MILLZDOTETH LLC. All rights reserved.</p>
       <p>
         <a href="mailto:0xmillzthebuilder@gmail.com" class="contact-link">Contact Us</a>
       </p>
